# microsoft-r-open

./: .gitignore  README.md  branch.json  build-linux.sh  build-mac.sh  build.cake  build.ps1  build.sh  nuget.config  own-files.ps1
additionalPackages/MicrosoftR/: DESCRIPTION  LICENSE  NAMESPACE
additionalPackages/R6/: DESCRIPTION  MD5
additionalPackages/RODBC/: ChangeLog  DESCRIPTION  LICENCE.note  MD5  NAMESPACE  cleanup  configure  configure.ac
additionalPackages/RODBC/R/: RODBC.R  TypeInfo.R  sql.R  win.R
additionalPackages/RODBC/inst/: tests.R
additionalPackages/RODBC/inst/po/da/LC_MESSAGES/: R-RODBC.mo  RODBC.mo
additionalPackages/RODBC/inst/po/de/LC_MESSAGES/: R-RODBC.mo  RODBC.mo
additionalPackages/RODBC/inst/po/en@quot/LC_MESSAGES/: R-RODBC.mo  RODBC.mo
additionalPackages/RODBC/inst/po/pl/LC_MESSAGES/: R-RODBC.mo  RODBC.mo
additionalPackages/RODBC/man/: RODBC-internal.Rd  RODBC-package.Rd  odbc.Rd  odbcClose.Rd  odbcConnect.Rd  odbcDataSources.Rd  odbcGetInfo.Rd  odbcSetAutoCommit.Rd  setSqlTypeInfo.Rd  sqlColumns.Rd  sqlCopy.Rd  sqlDrop.Rd  sqlFetch.Rd  sqlQuery.Rd  sqlSave.Rd  sqlTables.Rd  sqlTypeInfo.Rd
additionalPackages/RODBC/po/: R-RODBC.pot  R-da.po  R-de.po  R-pl.po  RODBC.pot  da.po  de.po  pl.po
additionalPackages/RODBC/src/: Makevars.in  Makevars.win  RODBC.c  config.h  config.h.in
additionalPackages/RODBC/tests/: DB2.RR  DB2.Rout.save  Master.R  Notes  Oracle.RR  Oracle.Rout.save  SQLServer.RR  SQLServer.Rout.save  access.RR  access.Rout.save  excel.RR  excel.Rout.save  hills.xls  mimer.RR  mimer.Rout.save  mysql-win.RR  mysql-win.Rout.save  mysql.RR  mysql.Rout.save  postgresql.RR  postgresql.Rout.save  sqlite3.RR  sqlite3.Rout.save
additionalPackages/RODBC/vignettes/: RODBC.Rnw
additionalPackages/RUnit/: ChangeLog  DESCRIPTION  INDEX  NAMESPACE  NEWS
additionalPackages/RUnit/R/: 00Init.r  checkFuncs.r  exportHTML.r  html.r  htmlProtocol.r  inspector.r  options.r  runit.r  testLogger.r  textProtocol.r
additionalPackages/RUnit/man/: RUnit-internal.Rd  RUnit-intro.Rd  RUnit-options.Rd  checkFuncs.Rd  inspect.Rd  printHTML.trackinfo.Rd  runit.Rd  testCaseSetUp.Rd  textProtocol.Rd  tracker.Rd
additionalPackages/RUnit/tests/: README
additionalPackages/Rcpp/: DESCRIPTION  MD5
additionalPackages/RevoIOQ/: DESCRIPTION  NAMESPACE
additionalPackages/RevoIOQ/R/: RevoIOQ.R  sysdata.rda
additionalPackages/RevoIOQ/man/: RevoIOQ.Rd
additionalPackages/RevoIOQ/md/: RevoIOQ.md  TOCsnip.md
additionalPackages/RevoIOQ/setup/: getstartSetup.R  htestSetup.R  regressionSetup.R
additionalPackages/RevoIOQ/tests/: doRUnit.R
additionalPackages/RevoIOQ/tests-internal/: runit-internet.R
additionalPackages/RevoMods/: DESCRIPTION  NAMESPACE
additionalPackages/RevoMods/R/: help.R  revoFix.R  revoPlot.R  revoQuit.R  revoSource.R  revoTimestamp.R  revoTry.R  testing.R  xpred.rpart.R
additionalPackages/RevoMods/man/: Question.Rd  revoPlot.Rd  xpred.Rd
additionalPackages/RevoUtils/: DESCRIPTION  NAMESPACE
additionalPackages/RevoUtils/R/: RUtils.R  Revo.home.R  RevoVersion.R  Welcome.R  getRevoRepos.R  isClient.R  readNews.R  zzz.R
additionalPackages/RevoUtils/man/: Revo.home.Rd  RevoInfo.Rd  getRevoRepos.Rd  readNews.Rd  totalSystemMemory.Rd
additionalPackages/checkpoint/: .Rbuildignore  .Renviron  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  NEWS  README.Rmd  README.md
additionalPackages/checkpoint/R/: access_date.R  checkpoint-package.R  checkpoint.R  checkpoint_internals.R  checkpoint_log.R  checkpoint_paths.R  checkpoint_remove.R  detach.R  fixRstudioBug.R  installMissingBasePackages.R  mock-install-packages.R  mranUrl.R  scanRepoPackages.R  setSnapshot.R  test-common-functions.R  zzz.R
additionalPackages/checkpoint/man/: checkpoint-package.Rd  checkpoint.Rd  checkpointArchives.Rd  checkpointRemove.Rd  getAccessDate.Rd  getValidSnapshots.Rd  mranUrl.Rd  scanForPackages.Rd  setSnapshot.Rd  unCheckpoint.Rd
additionalPackages/checkpoint/tests/: test-all.R
additionalPackages/checkpoint/vignettes/: checkpoint.Rmd  managing-checkpoint-archives.Rmd
additionalPackages/codetools/: MD5
additionalPackages/codetools/R/: codetools.R
additionalPackages/codetools/man/: checkUsage.Rd  codetools.Rd  findGlobals.Rd  showTree.Rd
additionalPackages/curl/: DESCRIPTION  MD5  configure
additionalPackages/curl/examples/: crawler.R
additionalPackages/deployr-rserve/: .gitignore  README.md
additionalPackages/deployr-rserve/Rserve/: DESCRIPTION  LICENSE  NEWS  configure
additionalPackages/deployr-rserve/RserveVisualStudio/: Rserve.sln
additionalPackages/doParallel/: DESCRIPTION  MD5  NAMESPACE  NEWS
additionalPackages/doParallel/R/: doParallel.R  zzz.R
additionalPackages/doParallel/demo/: 00Index  sincParallel.R
additionalPackages/doParallel/man/: doParallel-package.Rd  registerDoParallel.Rd
additionalPackages/doParallel/tests/: doRUnit.R
additionalPackages/foreach/: DESCRIPTION  NEWS
additionalPackages/iterators/: DESCRIPTION
additionalPackages/jsonlite/: DESCRIPTION  MD5
additionalPackages/patches/: configure_curl
additionalPackages/png/: DESCRIPTION  MD5  configure.win
additionalPackages/rpart/: ChangeLog  MD5  README.md
patch/: dynamic-build.patch  getShortPathNameFix.patch  ldlibrary.patch  normalizePathFix.patch  relocatable-r.patch  utilsExtras.patch
setup-MRO/: build.cake  global.props
setup-MRO/LinuxInstallers/microsoft-r-open/: CMakeLists.txt
setup-MRO/LinuxInstallers/microsoft-r-open/rpm-sles/: CMakeLists.txt
setup-MRO/RInstaller/: BootstrapperCore.config  CommandLineOptions.cs  RInstaller.csproj  RInstallerEngine.cs  RSetup.cs  SqlBindR.cs  Utilities.cs  packages.config
setup-MRO/ROpen/: MRO-Files.wxs  MklEula.rtf  MklInstallDlg.wxs  MklLicenseDlg.wxs  MroWelcomeDlg.wxs  Product.wxs  ROpen.wixproj  ROpenEula.rtf  SetupUI.wxs  Setup_en-us.wxl  packages.config
setup-MRO/ROpenSetupBootstrapper/: Bundle.wxs  ROpenSetupBootstrapper.wixproj  productResource.json
source/: README  SVN-REVISION  config.site
source/doc/: FAQ  NEWS
templates/: MkRules.local
tools/: packages.config
(+483 files in other folders)
